--- a/Resources/Private/Templates/ContentElements/Special/SiteHeader.html
+++ b/Resources/Private/Templates/ContentElements/Special/SiteHeader.html
@@ -78,7 +78,7 @@
     </f:if>
 
     <f:if condition="{data.mainNavigation}">
-	 <f:render section="MainNavigation" arguments="{_all}" />
+      <f:render section="MainNavigation" arguments="{_all}" />
     </f:if>
 
 
@@ -89,133 +89,149 @@
 
 
 <f:section name="MainNavigation">
-	<!-- t3kit: Main menu [begin] -->
-		<nav id="main-navigation" class="main-navigation js__main-navigation {f:if(condition: data.nav_dropdownColumns, then: ' _dropdown-menu-with-columns js__dropdown-menu-with-columns')}">
-			<div class="main-navigation__items-wrp js__navigation__items-wrp">
-				<f:if condition="{data.nav_logo}">
-					<div class="main-navigation__logo">
-						<f:if condition="{image}">
-							<a href="/" title="Home" class="main-navigation__logo-link">
-								<f:for each="{image}" as="mediaItem" iteration="imageIteration">
-										<f:if condition="{imageIteration.isFirst}">
-											<f:render section="media" arguments="{_all}" />
-										</f:if>
-								</f:for>
-							</a>
-						</f:if>
-					</div>
-				</f:if>
-				<f:if condition="{data.nav_langMenu}">
-					<f:render section="LanguageNavigation" arguments="{languageNavigation: languageNavigation}" />
-				</f:if>
-				<!-- main.navigation" -->
-				<ul class="main-navigation__items-list js__main-navigation__items-list {data.nav_position}">
-					<f:for each="{mainNav}" as="navItem">
-						<li class="main-navigation__item js__main-navigation__item uid-{navItem.data.uid} {f:if(condition: navItem.active, then:' _active')} {f:if(condition: navItem.children , then:' _sub')}">
-							<a href="{navItem.link}" title="{navItem.title}" class="main-navigation__item-link js__main-navigation__item-link">{navItem.title}</a>
-							<!-- second level -->
-							<f:if condition="{navItem.children}">
-								<f:if condition="{data.nav_dropdownColumns}">
-									<f:then>
-										<div class="tablet-arrow"><a href="#" class="main-navigation__open-sub-menu-link js__main-navigation__open-sub-menu-link">Open</a></div>
-										<div class="main-navigation__sub-item-list">
-											<div class="container">
-												<div class="row">
-													<div class="col-lg-3">
-														<ul class="main-navigation__sub-item-column-list">
-															<f:for each="{navItem.children}" as="childItem">
-																<f:if condition="{childItem.spacer}">
-																	<f:then>
-																		</ul></div><div class="col-lg-3"><ul class="main-navigation__sub-item-column-list">
-																	</f:then>
-																	<f:else>
-																		<li class="main-navigation__sub-item {f:if(condition: childItem.active, then:' _active')} {f:if(condition: childItem.current, then:'_current')} uid-{childItem.data.uid}">
-																			<a href="{childItem.link}" class="main-navigation__sub-item-link  _sub-level-2 {f:if(condition: childItem.children, then:' _sub ')} {f:if(condition: childItem.active, then:' _active')} {f:if(condition: childItem.current, then:'_current')}">{childItem.title}</a>
-																			<f:if condition="{data.nav_dropdownLevel} >= 3">
-																				<f:render section="subLevelColumn" arguments="{item:childItem, level:'3', dropdownLevel: data.nav_dropdownLevel}" />
-																			</f:if>
-																		</li>
-																	</f:else>
-																</f:if>
-															</f:for>
-														</ul>
-													</div>
-												</div>
-											</div>
-										</div>
-									</f:then>
-									<f:else>
-										<f:if condition="{data.nav_type} == 0">
-											<f:then>
-												<a href="#" class="main-navigation__open-sub-menu-link js__main-navigation__open-sub-menu-link">Open</a>
-												<ul class="main-navigation__sub-item-list second-navigation-level">
-													<f:for each="{navItem.children}" as="childItem">
-														<f:if condition="{childItem.spacer} == 0">
-															<li class="main-navigation__sub-item {f:if(condition: childItem.active, then:' _active')} uid-{childItem.data.uid} {f:if(condition: '{childItem.children} && {data.nav_dropdownLevel} >= 3', then:' _sub')} ">
-																<a href="{childItem.link}" class="main-navigation__sub-item-link">{childItem.title}</a>
-																<f:if condition="{data.nav_dropdownLevel} >= 3">
-																	<f:render section="subLevel" arguments="{item:childItem, level:'third', dropdownLevel: data.nav_dropdownLevel}" />
-																</f:if>
-															</li>
-														</f:if>
-													</f:for>
-												</ul>
-											</f:then>	
-										</f:if>
-									</f:else>
-								</f:if>
-							</f:if>
-						</li>
-					</f:for>
+  <!-- t3kit: Main menu [begin] -->
+  <nav id="main-navigation"
+    class="main-navigation js__main-navigation {f:if(condition: data.nav_dropdownColumns, then: ' _dropdown-menu-with-columns js__dropdown-menu-with-columns')}">
+    <div class="main-navigation__items-wrp js__navigation__items-wrp">
+      <f:if condition="{data.nav_logo}">
+        <div class="main-navigation__logo">
+          <f:if condition="{image}">
+            <a href="/" title="Home" class="main-navigation__logo-link">
+              <f:for each="{image}" as="mediaItem" iteration="imageIteration">
+                <f:if condition="{imageIteration.isFirst}">
+                  <f:render section="media" arguments="{_all}" />
+                </f:if>
+              </f:for>
+            </a>
+          </f:if>
+        </div>
+      </f:if>
+      <f:if condition="{data.nav_langMenu}">
+        <f:render section="LanguageNavigation" arguments="{languageNavigation: languageNavigation}" />
+      </f:if>
+      <!-- main.navigation" -->
+      <ul class="main-navigation__items-list js__main-navigation__items-list {data.nav_position}">
+        <f:for each="{mainNav}" as="navItem">
+          <li
+            class="main-navigation__item js__main-navigation__item uid-{navItem.data.uid} {f:if(condition: navItem.active, then:' _active')} {f:if(condition: navItem.children , then:' _sub')}">
+            <a href="{navItem.link}" title="{navItem.title}"
+              class="main-navigation__item-link js__main-navigation__item-link">{navItem.title}</a>
+            <!-- second level -->
+            <f:if condition="{navItem.children}">
+              <f:if condition="{data.nav_dropdownColumns}">
+                <f:then>
+                  <div class="tablet-arrow"><a href="#"
+                      class="main-navigation__open-sub-menu-link js__main-navigation__open-sub-menu-link">Open</a></div>
+                  <div class="main-navigation__sub-item-list">
+                    <div class="container">
+                      <div class="row">
+                        <div class="col-lg-3">
+                          <ul class="main-navigation__sub-item-column-list">
+                            <f:for each="{navItem.children}" as="childItem">
+                              <f:if condition="{childItem.spacer}">
+                                <f:then>
+                          </ul>
+                        </div>
+                        <div class="col-lg-3">
+                          <ul class="main-navigation__sub-item-column-list">
+                </f:then>
+                <f:else>
+          <li
+            class="main-navigation__sub-item {f:if(condition: childItem.active, then:' _active')} {f:if(condition: childItem.current, then:'_current')} uid-{childItem.data.uid}">
+            <a href="{childItem.link}"
+              class="main-navigation__sub-item-link  _sub-level-2 {f:if(condition: childItem.children, then:' _sub ')} {f:if(condition: childItem.active, then:' _active')} {f:if(condition: childItem.current, then:'_current')}">{childItem.title}</a>
+            <f:if condition="{data.nav_dropdownLevel} >= 3">
+              <f:render section="subLevelColumn"
+                arguments="{item:childItem, level:'3', dropdownLevel: data.nav_dropdownLevel}" />
+            </f:if>
+          </li>
+          </f:else>
+          </f:if>
+        </f:for>
+      </ul>
+    </div>
+    </div>
+    </div>
+    </div>
+    </f:then>
+    <f:else>
+      <f:if condition="{data.nav_type} == 0">
+        <f:then>
+          <a href="#" class="main-navigation__open-sub-menu-link js__main-navigation__open-sub-menu-link">Open</a>
+          <ul class="main-navigation__sub-item-list second-navigation-level">
+            <f:for each="{navItem.children}" as="childItem">
+              <f:if condition="{childItem.spacer} == 0">
+                <li
+                  class="main-navigation__sub-item {f:if(condition: childItem.active, then:' _active')} uid-{childItem.data.uid} {f:if(condition: '{childItem.children} && {data.nav_dropdownLevel} >= 3', then:' _sub')} ">
+                  <a href="{childItem.link}" class="main-navigation__sub-item-link">{childItem.title}</a>
+                  <f:if condition="{data.nav_dropdownLevel} >= 3">
+                    <f:render section="subLevel"
+                      arguments="{item:childItem, level:'third', dropdownLevel: data.nav_dropdownLevel}" />
+                  </f:if>
+                </li>
+              </f:if>
+            </f:for>
+          </ul>
+        </f:then>
+      </f:if>
+    </f:else>
+    </f:if>
+    </f:if>
+    </li>
+    </f:for>
 
-					<f:if condition="{theme:constant(constant:'themes.configuration.elem.status.headerTopNavigationVisibleInMobileMenu')}">
-						<!-- lib.menu.topMobile" -->
-					</f:if>
-					<f:if condition="{theme:constant(constant:'themes.configuration.elem.status.showHeaderMainMenuSearch')}">
-						<!-- lib.menu.main.search  -->
-					</f:if>
-				</ul>
-			</div>
-		</nav>
+    <f:if
+      condition="{theme:constant(constant:'themes.configuration.elem.status.headerTopNavigationVisibleInMobileMenu')}">
+      <!-- lib.menu.topMobile" -->
+    </f:if>
+    <f:if condition="{theme:constant(constant:'themes.configuration.elem.status.showHeaderMainMenuSearch')}">
+      <!-- lib.menu.main.search  -->
+    </f:if>
+    </ul>
+    </div>
+  </nav>
 
-	<!-- t3kit: Main menu [end] -->
+  <!-- t3kit: Main menu [end] -->
 </f:section>
 
 <f:section name="subLevelColumn">
-	<!-- if show third level of navigation -->
-	<f:if condition="{item.children}">
-		<ul class="main-navigation__sub-item-column-list">
-			<f:for each="{item.children}" as="childChildItem">
-				<f:if condition="{childChildItem.spacer} == 0">
-					<li class="main-navigation__sub-item {f:if(condition: childChildItem.active, then:' _active')} {f:if(condition: childChildItem.current, then:'_current')} uid-{childChildItem.data.uid}">
-						<a href="{childChildItem.link}" class="main-navigation__sub-item-link _sub-level-{level} {f:if(condition: childChildItem.current, then:'_current')} {f:if(condition: childChildItem.active, then:' _active')}">{childChildItem.title}</a>
-						<f:if condition="{dropdownLevel} == 4">
-							<f:render section="subLevelColumn" arguments="{item:childChildItem, level:'4'}" />
-						</f:if>
-					</li>
-				</f:if>
-			</f:for>
-		</ul>
-	</f:if>
+  <!-- if show third level of navigation -->
+  <f:if condition="{item.children}">
+    <ul class="main-navigation__sub-item-column-list">
+      <f:for each="{item.children}" as="childChildItem">
+        <f:if condition="{childChildItem.spacer} == 0">
+          <li
+            class="main-navigation__sub-item {f:if(condition: childChildItem.active, then:' _active')} {f:if(condition: childChildItem.current, then:'_current')} uid-{childChildItem.data.uid}">
+            <a href="{childChildItem.link}"
+              class="main-navigation__sub-item-link _sub-level-{level} {f:if(condition: childChildItem.current, then:'_current')} {f:if(condition: childChildItem.active, then:' _active')}">{childChildItem.title}</a>
+            <f:if condition="{dropdownLevel} == 4">
+              <f:render section="subLevelColumn" arguments="{item:childChildItem, level:'4'}" />
+            </f:if>
+          </li>
+        </f:if>
+      </f:for>
+    </ul>
+  </f:if>
 </f:section>
 
 <f:section name="subLevel">
-	<!-- if show third level of navigation -->
-	<f:if condition="{item.children}">
-		<a href="#" class="main-navigation__open-sub-menu-link js__main-navigation__open-{level}-menu-link">Open</a>
-		<ul class="main-navigation__sub-item-list {level}-navigation-level">
-			<f:for each="{item.children}" as="childChildItem">
-				<f:if condition="{childChildItem.spacer} == 0">
-					<li class="main-navigation__sub-item {f:if(condition: childChildItem.active, then:' _active')} uid-{childChildItem.data.uid} {f:if(condition: '{childChildItem.children} && {dropdownLevel} == 4', then:' _sub')}">
-						<a href="{childChildItem.link}" class="main-navigation__sub-item-link">{childChildItem.title}</a>
-							<f:if condition="{dropdownLevel} == 4">
-								<f:render section="subLevel" arguments="{item:childChildItem, level:'forth'}" />
-							</f:if>
-					</li>
-				</f:if>
-			</f:for>
-		</ul>
-	</f:if>
+  <!-- if show third level of navigation -->
+  <f:if condition="{item.children}">
+    <a href="#" class="main-navigation__open-sub-menu-link js__main-navigation__open-{level}-menu-link">Open</a>
+    <ul class="main-navigation__sub-item-list {level}-navigation-level">
+      <f:for each="{item.children}" as="childChildItem">
+        <f:if condition="{childChildItem.spacer} == 0">
+          <li
+            class="main-navigation__sub-item {f:if(condition: childChildItem.active, then:' _active')} uid-{childChildItem.data.uid} {f:if(condition: '{childChildItem.children} && {dropdownLevel} == 4', then:' _sub')}">
+            <a href="{childChildItem.link}" class="main-navigation__sub-item-link">{childChildItem.title}</a>
+            <f:if condition="{dropdownLevel} == 4">
+              <f:render section="subLevel" arguments="{item:childChildItem, level:'forth'}" />
+            </f:if>
+          </li>
+        </f:if>
+      </f:for>
+    </ul>
+  </f:if>
 </f:section>
 
 <f:section name="LanguageNavigation">
@@ -259,13 +275,8 @@
 </f:section>
 
 <f:section name="media">
-	<f:media
-		file="{mediaItem}"
-		width="{data.logo_width}"
-		alt="{mediaItem.alternative}"
-		title="{mediaItem.title}"
-		class="img-text-link__img img-responsive"
-	/>
+  <f:media file="{mediaItem}" width="{data.logo_width}" alt="{mediaItem.alternative}" title="{mediaItem.title}"
+    class="img-text-link__img img-responsive" />
 </f:section>
 
 </html>
