[TASK] add footer site configs

--- a/Resources/Private/Templates/ContentElements/Special/SiteFooter.html
+++ b/Resources/Private/Templates/ContentElements/Special/SiteFooter.html
@@ -6,56 +6,62 @@
   <footer class="footer">
       <div class="container">
         <!-- here should be list of pages, subscribe form, additional text -->
-        <div class="row">
-            <!-- List of menus -->
-            <div class="col">
+        <f:if condition="{data.footerTop}">
+          <div class="row">
+              <!-- List of menus -->
+              <div class="col">
 
-            </div>
-            <!-- Sibscribe form & RTE text-->
-            <div class="col">
+              </div>
+              <!-- Sibscribe form & RTE text-->
+              <div class="col">
 
-            </div>
+              </div>
 
-            <!-- Force next columns to break to new line at md breakpoint and up -->
-            <div class="w-100 d-none d-md-bloc"></div>
+              <!-- Force next columns to break to new line at md breakpoint and up -->
+              <div class="w-100 d-none d-md-bloc"></div>
+          </div>
+        </f:if>
 
-        </div>
+        <f:if condition="{data.footerMiddle}">
+          <div class="row align-items-center">
+              <div class="col">
+                <!-- Logo -->
+                <f:if condition="{data.nav_logo}">
+                  <div class="footer__logo">
+                    <f:if condition="{image}">
+                      <a href="/" title="Home" class="footer__logo-link">
+                        <f:for each="{image}" as="mediaItem" iteration="imageIteration">
+                          <f:if condition="{imageIteration.isFirst}">
+                            <f:render section="media" arguments="{_all}" />
+                          </f:if>
+                        </f:for>
+                      </a>
+                    </f:if>
+                  </div>
+                </f:if>
+              </div>
+              <div class="col">
+                <!-- Text -->
+              </div>
+              <div class="col">
+                <!-- Social Icon -->
+              </div>
+          </div>
+        </f:if>
 
-        <div class="row align-items-center">
-            <div class="col">
-              <!-- Logo -->
-              <f:if condition="{data.nav_logo}">
-                <div class="footer__logo">
-                  <f:if condition="{image}">
-                    <a href="/" title="Home" class="footer__logo-link">
-                      <f:for each="{image}" as="mediaItem" iteration="imageIteration">
-                        <f:if condition="{imageIteration.isFirst}">
-                          <f:render section="media" arguments="{_all}" />
-                        </f:if>
-                      </f:for>
-                    </a>
-                  </f:if>
-                </div>
-              </f:if>
-            </div>
-            <div class="col">
-              <!-- Text -->
-            </div>
-            <div class="col">
-              <!-- Social Icon -->
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col align-self-start">
-              <!-- All rights reserved -->
-            </div>
-            <div class="col align-self-end">
-              <!-- Additional Links -->
-            </div>
-        </div>
+        <f:if condition="{data.footerBottom}">
+          <div class="row">
+              <div class="col align-self-start">
+                <!-- All rights reserved -->
+              </div>
+              <div class="col align-self-end">
+                <!-- Additional Links -->
+              </div>
+          </div>
+        </f:if>
       </div>
   </footer>
+</f:section>
 
   <f:section name="media">
     <f:media
