--- a/Resources/Private/Templates/ContentElements/Static/Table.html
+++ b/Resources/Private/Templates/ContentElements/Static/Table.html
@@ -3,7 +3,15 @@
 <f:section name="Main">
 
   <f:if condition="{table}">
-    <table class="ce-table{f:if(condition: data.table_class, then: ' ce-table-{data.table_class}')}">
+
+    <f:comment><!-- use tableClass, an array of classes to build into one string--></f:comment>
+    <f:if condition="{tableClass}">
+      <f:for each="{tableClass}" as="class" iteration="i">
+        <f:variable name="table_classes">{table_classes} {class}</f:variable>
+      </f:for>
+    </f:if>
+
+    <table class="ce-table table{f:if(condition: table_classes, then: '{table_classes}')}">
       <f:if condition="{data.table_caption}">
         <caption>{data.table_caption}</caption>
       </f:if>
