[FEATURE] use t3kit svg file icons

--- a/Resources/Private/Templates/ContentElements/Static/Uploads.html
+++ b/Resources/Private/Templates/ContentElements/Static/Uploads.html
@@ -7,7 +7,7 @@
       <f:for each="{files}" as="file" iteration="fileIterator">
         <li>
           <f:if condition="{data.uploads_type} == 1">
-            <img src="{f:uri.resource(path: 'Icons/FileIcons/{file.extension}.gif', extensionName: 'frontend')}" alt="">
+            <f:image src="EXT:t3kit/Resources/Public/Icons/FileIcons/{file.extension}.svg" alt="" />
           </f:if>
           <f:if condition="{data.uploads_type} == 2">
             <f:if condition="{file.type} > 1">
