--- a/Resources/Private/Templates/ContentElements/Static/BigIconTextButton.html
+++ b/Resources/Private/Templates/ContentElements/Static/BigIconTextButton.html
@@ -1,54 +1,59 @@
 <html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true">
 
 <f:layout name="Default" />
+
 <f:section name="Header" />
+
 <f:section name="Main">
-  <!-- t3kit: BigIconTextButton.html [begin] -->
+  <f:if condition="{flexform.disableWholeAreaLink} == 1">
+    <f:then>
+      <f:render section="Content" arguments="{_all}" />
+    </f:then>
+    <f:else>
+      <f:link.typolink parameter="{data.link}">
+        <f:render section="Content" arguments="{_all}" />
+      </f:link.typolink>
+    </f:else>
+  </f:if>
+</f:section>
+
+<f:section name="Content">
   <div class="big-icon-text-btn__wrp">
-    <div class="big-icon-text-btn{f:if(condition: settings.disableWholeAreaLink, then: '', else: ' _whole-area-link')}">
-      <f:if condition="{settings.iconClass}">
-        <span class="big-icon-text-btn__icon icons icon-{settings.iconClass}" aria-hidden="true"></span>
+    <div class="big-icon-text-btn">
+      <f:if condition="{flexform.iconClass}">
+        <span class="big-icon-text-btn__icon icons icon-{flexform.iconClass}" aria-hidden="true"></span>
       </f:if>
+
       <f:if condition="{data.header}">
         <f:render partial="Header/Header" arguments="{
-        header: '{data.header}',
-        layout: '{data.header_layout}',
-        positionClass: 'big-icon-text-btn__header',
-        link: '',
-        uid: '{data.uid}',
-        default: 3
+          header: '{data.header}',
+          layout: '{data.header_layout}',
+          positionClass: 'big-icon-text-btn__header',
+          link: ''
         }" />
       </f:if>
+
       <f:if condition="{data.bodytext}">
-        <p class="big-icon-text-btn__p">
-          <core:contentEditable table="tt_content" field="bodytext" uid="{data.uid}">{data.bodytext}
-          </core:contentEditable>
-        </p>
+        <p class="big-icon-text-btn__p">{data.bodytext}</p>
       </f:if>
-      <f:if condition="{data.header_link}">
-        <f:if condition="{data.subheader}">
-          <f:then>
-            <f:link.typolink parameter="{data.header_link}"
-              class="big-icon-text-btn__link {f:if(condition: settings.btnAsLink, then: '', else: 'btn btn-default')}">
-              {data.subheader}</f:link.typolink>
-          </f:then>
-          <f:else>
-            <f:link.typolink parameter="{data.header_link}"
-              class="big-icon-text-btn__link {f:if(condition: settings.btnAsLink, then: '', else: 'btn btn-default')}">
-              {data.header}</f:link.typolink>
-          </f:else>
-        </f:if>
+
+      <f:if condition="{data.link} && {flexform.disableWholeAreaLink} == 1">
+        <f:link.typolink
+          parameter="{data.link}"
+          class="big-icon-text-btn__link{f:if(condition: flexform.btnAsLink, then: '', else: ' btn btn-default')}">
+            {f:if(condition: data.link_title, then: data.link_title, else: data.header)}
+        </f:link.typolink>
       </f:if>
-      <f:if condition="{settings.disableWholeAreaLink} == 0">
-        <f:if condition="{data.subheader}">
+
+      <f:if condition="{flexform.disableWholeAreaLink} == 0">
           <span
-            class="big-icon-text-btn__sham-link {f:if(condition: settings.btnAsLink, then: '', else: 'btn btn-default')}"
-            aria-hidden="true">{data.subheader}</span>
-        </f:if>
+            class="big-icon-text-btn__sham-link {f:if(condition: flexform.btnAsLink, then: '', else: 'btn btn-default')}"
+            aria-hidden="true">
+              {f:if(condition: data.link_title, then: data.link_title, else: data.header)}
+          </span>
       </f:if>
     </div>
   </div>
-  <!-- t3kit: BigIconTextButton.html [end] -->
 </f:section>
 
 </html>
