[TASK] add possibility to render FE assets

--- a/Resources/Private/Templates/Favicons.html
+++ b/Resources/Private/Templates/Favicons.html
@@ -13,6 +13,6 @@
   <meta name="theme-color" content="#ffffff">
 
   <f:comment>
-    <link rel="stylesheet" type="text/css" href="{f:uri.resource(path:'CSS/t3kit.css', extensionName: '{site.configuration.theme}')}" media="all">
+    <!-- <link rel="stylesheet" type="text/css" href="{f:uri.resource(path:'CSS/t3kit.css', extensionName: '{site.configuration.theme}')}" media="all"> -->
   </f:comment>
 </html>
