--- a/Resources/Private/Templates/Page/StartPage.html
+++ b/Resources/Private/Templates/Page/StartPage.html
@@ -18,6 +18,8 @@
 
   <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:11, slide:'-1'}" />
 
+
+  <f:render partial="js/mainjs" arguments="{_all}" />
 </f:section>
 
 </html>
