[TASK] change styling for quote element, change how bootstrap styling is fetched, changes to quote translation

--- a/theme/src/styles/_variables.scss
+++ b/theme/src/styles/_variables.scss
@@ -53,7 +53,7 @@ $font-family-base:            $font-family-sans-serif;
 
 // ==============================
 // Import Bootstrap default theme
-@import 'bootstrap/variables'
+@import 'bootstrap/variables';
 // ==============================
 
 
