--- a/theme/src/styles/main.scss
+++ b/theme/src/styles/main.scss
@@ -1,10 +1,10 @@
 // ===== bootstrap =====
-@use 'bootstrap';
+@import 'bootstrap';
 
 // ===== content-elements =====
 // @use 'content-elements/header';
 // @use 'content-elements/footer';
-@use 'content-elements/big-icon-text-button';
+@import 'content-elements/big-icon-text-button';
 // @use 'content-elements/accordion';
 // @use 'content-elements/contacts-card';
 // @use 'content-elements/hero-image';
@@ -12,7 +12,7 @@
 // @use 'content-elements/image-text-link';
 // @use 'content-elements/logo-carousel';
 // @use 'content-elements/parallax';
-// @use 'content-elements/quote';
+@import 'content-elements/quote';
 // @use 'content-elements/slider';
 // @use 'content-elements/social-icons';
 
